    Fixes: unused, object count in info, unannex.
  * Improve url parsing to handle some urls containing illegal []
    characters in their paths.
  * debian/cabal-wrapper: Removed this hack which should not be needed anymore.
  * info: Added json output for "backend usage", "numcopies stats",
    "repositories containing these files", and "transfers in progress".

 -- Joey Hess <id@joeyh.name>  Sat, 30 May 2015 02:07:18 -0400

git-annex (5.20150528) unstable; urgency=medium

  * fromkey, registerurl: Allow urls to be specified instead of keys,
    and generate URL keys.
  * Linux standalone, OSX app: Improve runshell script to always quote
    shell vars, so that it will work when eg, untarred into a directory
    path with spaces in its name.
  * Revert removal dependency on obsolete hamlet package, since the
    autobuilders are not ready for this change yet and it prevented them
    from building the webapp. Reopens: #786659
  * fsck: When checksumming a file fails due to a hardware fault,
    the file is now moved to the bad directory, and the fsck proceeds.
    Before, the fsck immediately failed.
  * Linux standalone: The webapp was not built in the previous release,
    this release fixes that oversight.

 -- Joey Hess <id@joeyh.name>  Thu, 28 May 2015 10:48:03 -0400

git-annex (5.20150522) unstable; urgency=medium

  * import: Refuse to import files that are within the work tree, as that
    does not make sense and could cause data loss.
  * drop: Now supports --all, --unused, and --key.
  * drop: Now defaults to --all when run in a bare repository.
    (Previously, did nothing when run in a bare repository.)
  * get, move, copy, mirror: Concurrent transfers are now supported!
    For example: git-annex get -J10
    However, progress bars are not yet displayed for concurrent transfers,
    pending an updated version of the ascii-progress library.
  * --quiet now makes progress output by rsync, wget, etc be quiet too.