@@ -34,6 +34,7 @@ git-annex (5.20150529) UNRELEASED; urgency=medium
   * debian/cabal-wrapper: Removed this hack which should not be needed anymore.
   * info: Added json output for "backend usage", "numcopies stats",
     "repositories containing these files", and "transfers in progress".
+  * sync: Add support for --all and --unused.
 
  -- Joey Hess <id@joeyh.name>  Sat, 30 May 2015 02:07:18 -0400
 
